# claude-code-env

./: .gitignore  README.md
.claude-plugin/: marketplace.json
agents/: build-expert.md  design-expert.md  junior-dev.md  pm-manager.md  senior-dev.md
raws/: BUILD_ISSUES_AND_SOLUTIONS.md  BUILD_SCRIPTS_GUIDE.md  Example of installation for Windows using vcpkg _ Qt Protobuf _ Qt 6.10.1.html  README_BUILD_SUMMARY.md
raws/Example of installation for Windows using vcpkg _ Qt Protobuf _ Qt 6.10.1_files/: 09b8ded99e3057ee.css  481-940582b566af81f2.js.다운로드  4a616997-2cb747ddd15b9067.js.다운로드  530-65040d315ff6df69.js.다운로드  714-3aec865d013161fa.js.다운로드  80-e526dc25f7417b25.js.다운로드  8174a357-73846c1f42d8a17d.js.다운로드  82-cad7742c77228264.js.다운로드  825-cfbb7e3027125656.js.다운로드  833-dd8e1ac26dd1b1bc.js.다운로드  86625aeb-fbbac1b20e55b72e.js.다운로드  8XKW76J.html  [collectKey]-cff1c98d84ff5ed4.js.다운로드  _app-8a687f484056e7aa.js.다운로드  _buildManifest.js.다운로드  c3da3695a6fe8a3f.css  c66f189498306a9b.css  eaa715df-5b7d0fae7048eb19.js.다운로드  framework-5ddd597c94d4e4d0.js.다운로드  gtm.js.다운로드  init-tree.js.다운로드  main-6a8e4be21cba062a.js.다운로드  online2.css  qt-design-system-1.1.0-doc.js.다운로드  qt-design-system-1.1.0.css  qtds-extras.js.다운로드  webpack-0c576eebb9b8219a.js.다운로드
raws/cpp-dev-skills/: README.md
raws/cpp-dev-skills/reference/: cmake.md  codequality.md  compilers.md  debug.md  designpatterns.md  memory.md  testing.md  versioncontrols.md
scripts/: init_project.py  validate_env.py
skills/cmake-skill/: SKILL.md  finding-packages.md  modern-targets.md
skills/cmake-skill/assets/templates/header-only/: CMakeLists.txt
skills/cmake-skill/assets/templates/minimal/: CMakeLists.txt
skills/cmake-skill/assets/templates/with-dependencies/: CMakeLists.txt
skills/cmake-skill/scripts/: init_project.py
skills/code2doc/: README.md  SKILL.md
skills/code2doc/references/: analysis_template.md  mermaid_patterns.md
skills/code2doc/scripts/: generate_doc_md.py  generate_doc_pdf.py  generate_doc_pptx.py
skills/cpp-dev-skills/: SKILL.md
skills/cpp-dev-skills/automation/: automation-guide.md  decisions.json  error-patterns.json
skills/cpp-dev-skills/references/: cmake-presets.md  cmake.md  codequality.md  coding-standards.md  compilers.md  cross-compilation.md  debug.md  designpatterns.md  memory.md  project-setup.md  testing.md  vcpkg.md  versioncontrols.md
skills/cpp-dev-skills/scripts/: detect_tools.py  init_project.py  validate_project.py
skills/cpp-dev-skills/scripts/templates/cmake_modules/: Sanitizers.cmake  (+2 more)
skills/notion-sync/: SKILL.md  marketplace.json
skills/notion-sync/references/: examples.md  schema.md  setup-guide.md  url-encoding.md
skills/notion-sync/scripts/: sync_to_notion.py
skills/splitting-pdf-chapters/: FORMS.md  REFERENCE.md  SKILL.md
skills/splitting-pdf-chapters/scripts/: split_pdf.py
